add `create_role` and `delete_role` endpoints
